@@ -3,6 +3,9 @@
  * Add support for ``worktreeconfig`` extension.
    (Jelmer Vernooĳ)
 
+ * Deprecate ``dulwich.objects.parse_commit``.
+   (Jelmer Vernooĳ)
+
 0.21.2	2023-01-18
 
  * Fix early file close bug in ``dulwich.pack.extend_pack``.
